src/test/ui/span/issue-43927-non-ADT-derive.stderr
error[E0774]: `derive` may only be applied to structs, enums and unions
  --> $DIR/issue-43927-non-ADT-derive.rs:3:1
   |
LL | #![derive(Debug, PartialEq, Eq)] // should be an outer attribute!
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: try an outer attribute: `#[derive(Debug, PartialEq, Eq)]`

error: cannot determine resolution for the derive macro `Debug`
  --> $DIR/issue-43927-non-ADT-derive.rs:3:11
   |
LL | #![derive(Debug, PartialEq, Eq)] // should be an outer attribute!
   |           ^^^^^
   |
   = note: import resolution is stuck, try simplifying macro imports

error: cannot determine resolution for the derive macro `PartialEq`
  --> $DIR/issue-43927-non-ADT-derive.rs:3:18
   |
LL | #![derive(Debug, PartialEq, Eq)] // should be an outer attribute!
   |                  ^^^^^^^^^
   |
   = note: import resolution is stuck, try simplifying macro imports

error: cannot determine resolution for the derive macro `Eq`
  --> $DIR/issue-43927-non-ADT-derive.rs:3:29
   |
LL | #![derive(Debug, PartialEq, Eq)] // should be an outer attribute!
   |                             ^^
   |
   = note: import resolution is stuck, try simplifying macro imports

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0774`.
